<resources>
    <string name="app_name">Strange Place</string>
    <string name="places_name">nama tempat</string>
    <string name="description">deskripsi</string>
    <string name="title_name">Nama tempat</string>
    <string name="profile_name">Yoga narayana</string>
    <string name="url_github">https://github.com/narayoga</string>
    <string name="email">mbah.noname@gmail.com</string>
    <string name="lat">-8.834462</string>
    <string name="lon">115.151659</string>
    <string name="coordinate">coordinate: 6666, -111113</string>
    <string-array name="data_name">
        <item>Jervis Bay, Australia</item>
        <item>Zhangye Danxia, China</item>
        <item>Lake Hillier, Australia</item>
        <item>Green Bridge of Wales</item>
        <item>Darvaza Gas Crater, Turkmenistan</item>
        <item>Lunar Rainbow, Victoria Falls, Zambia</item>
        <item>Thor’s Well, USA</item>
        <item>Pamukkale, Turkey</item>
        <item>Uyuni Salt Flat, Bolivia</item>
        <item>Echo Beach, Indonesia</item>
    </string-array>
    <string-array name="data_description">
        <item>Australia’s Jervis Bay is actually home to the whitest sandy beach on the planet, but visitors don’t flock here for whiter-than-white sand. Okay, some do, but most head to this 102-square-kilometre oceanic bay for the magic that comes after dark. Jervis Bay is one of the few places on the planet where people can see the wonder of bioluminescence, as masses of plankton glow in the dark and give the water a gorgeously ethereal look. </item>
        <item>It\'s easy to convince yourself that the swirling colours of China’s Zhangye Danxia mountains are actually a painting, but this gorgeous landscape is very, very real. The colours are thanks to the whimsical movements of mineral deposits over millennia, although it took just about that much time for China to pay much attention to it. </item>
        <item>We wouldn’t ever claim to be expert limnologists, but we know enough about lakes to know that they aren’t usually pink. Not pink of any shade, let alone bright bubblegum pink, but that is the hue of Lake Hillier, a saline lake found on the edges of Middle Island in Western Australia. Algae, halobacteria and other microbes create this incredible scene</item>
        <item>Natural arches are weird wherever they are, be it the mountains of Bosnia and Herzegovina or the massive arch found in Arches National Park, Utah. There is something beautifully fragile about the Green Bridge of Wales, however, and it’s accentuated by the sleepy serenity of the Pembrokeshire coast and that inimitable sense of poetry that flows out of this small nation</item>
        <item>he crater has been burning for decades, creating one of the most intense images on the planet, and visitors have flocked here for the sort of view that just shouldn’t be possible. Nobody really knows how it ignited, but we can only assume it had something to do with Beelzebub. </item>
        <item>A moonbow! No, it isn’t the fantastical creation of a children’s fiction writer, but a very real phenomenon found at the already-magnificent Victoria Falls in southern Africa. These nighttime rainbows are only visible when there is a considerable amount of spray splashing back from the powerful cascades,</item>
        <item>Some people refer to Thor’s Well as the ‘Drainpipe of the Pacific’, but that just sounds downright disgusting. We’ll stick to Thor’s Well, a thrilling sinkhole that seems to suck the power of the ocean into its grasp at will. It is something of an oceanic black hole,</item>
        <item>Pamukkale literally translates as ‘cotton castle’, and that feels like a particularly apt name for this incredible network of thermal waters found in the west of Turkey. The geothermal phenomenon has been attracting visitors looking for revitalisation for centuries, but it took designation as a Unesco World Heritage site for the area to be maintained and preserved</item>
        <item>Human beings couldn’t survive without salt. The most important of all seasonings is responsible for a heck of a lot more than people realise, so there’s an extra special joy to the Uyuni Salt Flat. Of course, nobody really comes here to ponder the importance of salt.</item>
        <item>Sand usually veers towards the lighter end of the colour scale, and this makes the black sand beaches of Bali all the more jarring. Jarring in a good way, obviously, as there is something otherworldly about wandering down a jet-black beach, hand-in-hand with your loved one, as the turquoise waters do their thing.</item>
    </string-array>
    <string-array name="data_coordinate">
        <item> coordinate: -8.834462, 115.151659 </item>
        <item> coordinate: -21.903544, 115.526563 </item>
        <item> coordinate: 30.971304, 112.184297 </item>
        <item> coordinate: 45.862196, 81.651825 </item>
        <item> coordinate:68.994243, -8.834462 </item>
        <item> coordinate: 112.184297, 94.148351 </item>
        <item> coordinate: 30.971304, 112.184297 </item>
        <item> coordinate: -8.834462, 112.184297 </item>
        <item> coordinate: -21.903544, 94.148351 </item>
        <item> coordinate: 76.490889, 65.177280 </item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/jervis</item>
        <item>@drawable/zangye</item>
        <item>@drawable/hillier</item>
        <item>@drawable/wales</item>
        <item>@drawable/hell</item>
        <item>@drawable/moonbow</item>
        <item>@drawable/thor</item>
        <item>@drawable/pamukle</item>
        <item>@drawable/salt</item>
        <item>@drawable/echoes</item>
    </integer-array>
</resources>