<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="RedundantNamespace,ScrollViewSize">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="410dp"
            android:layout_height="300dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="16dp"
            android:foregroundGravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_name"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/title_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_description"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="16dp"
            android:text="@string/description"
            android:textSize="14sp"
            android:textStyle="normal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            app:layout_constraintBottom_toBottomOf="@+id/coordinate"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/coordinate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/coordinate"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="@color/teal_700"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_description"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>